--- a/lab2/package.json
+++ b/lab2/package.json
@@ -13,6 +13,7 @@
     "@hapi/joi": "^17.1.1",
     "@meanie/joi-object-id": "^2.1.1",
     "@types/hapi__joi": "^16.0.12",
+    "awilix": "^4.2.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "joi-objectid": "^3.0.1",
