--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ lab1/LICENSE
 lab1/.idea/jsLibraryMappings.xml
 lab2/.eslintrc.json
 lab2/.eslintrc
-lab4/.idea
 lab4/node_modules
+lab5/node_modules
+lab4/.idea
+lab5/.idea
