--- a/lab2/package.json
+++ b/lab2/package.json
@@ -15,6 +15,7 @@
     "@types/hapi__joi": "^16.0.12",
     "awilix": "^4.2.5",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi-objectid": "^3.0.1",
     "mongoose": "^5.9.4",
